--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,29 @@
 version: '3.7'
 
 volumes:
-    # mongo_data:
-    sqlite_data:
+    postgres_data:
 
 
 services: 
     api:
         build: ./backend
         command: uvicorn api.main:app --host 0.0.0.0 --port 8000 --reload
+        environment: 
+            DATABASE_URL: postgresql://postgres:postgres@db:5432/shorturl
         volumes:
             - ./backend:/backend
         ports:
             - 8000:8000
+        depends_on: 
+            - db
     
-    # mongo:
-    #     image: mongo
-    #     command: mongod --bind_ip 0.0.0.0
-    #     restart: always
-    #     environment:
-    #         MONGO_INITDB_ROOT_USERNAME: 'root'
-    #         MONGO_INITDB_ROOT_PASSWORD: 'admin'
-    #     volumes:
-    #         - mongo_data:/data/db
-    #     expose:
-    #         - 27017
+    db:
+        image: postgres:alpine
+        environment:
+            - POSTGRES_USER=postgres
+            - POSTGRES_PASSWORD=postgres
+            - POSTGRES_DB=shorturl
+        expose:
+            - 5432
+        volumes:
+            - postgres_data:/var/lib/postgresql/data/:cached
