--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,5 @@
-fastapi[all]
-uvicorn
-databases[postgresql]
-short_url
-sqlalchemy
-psycopg2-binary
+fastapi==0.100.0
+uvicorn==0.23.1
+databases[asyncpg]==0.7.0
+sqlalchemy==1.4.48
+psycopg2-binary==2.9.6
