--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ volumes:
 
 services:
     api:
+        image: ghcr.io/vean-tattoo/shorturl:latest
         build: ./backend
         command: uvicorn api.main:app --host 0.0.0.0 --port 8000 --reload
         environment:
